@@ -1,9 +1,9 @@
 ifdef jpipserver
-CFLAGS  = -O3 -Wall -m32 -DSERVER
+CFLAGS  = -g -Wall -DSERVER
 LIBNAME = libopenjpip_server.a
 else
 J2KINCDIR = ../../../libopenjpeg
-CFLAGS  = -O3 -Wall  -I$(J2KINCDIR)
+CFLAGS  = -g -Wall  -I$(J2KINCDIR)
 LIBNAME = libopenjpip_local.a
 endif
 
